tests/baselines/reference/jsDeclarationsExportFormsErr(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
bar.js(1,1): error TS8002: 'import ... =' can only be used in TypeScript files.
bar.js(2,1): error TS8003: 'export =' can only be used in TypeScript files.
bin.js(2,1): error TS2591: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
globalNs.js(2,1): error TS1315: Global module exports may only appear in declaration files.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== cls.js (0 errors) ====
    export class Foo {}
    
==== bar.js (2 errors) ====
    import ns = require("./cls");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    export = ns; // TS Only
    ~~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.
    
==== bin.js (1 errors) ====
    import * as ns from "./cls";
    module.exports = ns; // We refuse to bind cjs module exports assignments in the same file we find an import in
    ~~~~~~
!!! error TS2591: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
    
==== globalNs.js (1 errors) ====
    export * from "./cls";
    export as namespace GLO; // TS Only
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1315: Global module exports may only appear in declaration files.
    
==== includeAll.js (0 errors) ====
    import "./bar";
    import "./bin";
    import "./globalNs";
    